# libcamera

./: colcon.pkg  meson.build  meson_options.txt  package.xml
include/libcamera/: controls.h  framebuffer.h  geometry.h  request.h
include/libcamera/base/: span.h
include/libcamera/internal/: request.h
include/libcamera/ipa/: raspberrypi.h
src/apps/cam/: camera_session.cpp
src/apps/qcam/: meson.build
src/cam/: camera_session.cpp  main.cpp
src/ipa/ipu3/: ipu3.cpp
src/ipa/raspberrypi/: raspberrypi.cpp
src/libcamera/: control_ids.yaml  controls.cpp  device_enumerator.cpp  meson.build  pipeline_handler.cpp  property_ids.yaml  request.cpp  v4l2_videodevice.cpp
src/libcamera/base/: meson.build
src/libcamera/pipeline/ipu3/: ipu3.cpp
src/libcamera/pipeline/raspberrypi/: raspberrypi.cpp
src/libcamera/pipeline/uvcvideo/: uvcvideo.cpp
src/libcamera/pipeline/vivid/: vivid.cpp
src/qcam/: dng_writer.cpp  meson.build
subprojects/: libpisp.wrap
test/: span.cpp
test/serialization/: ipa_data_serializer_test.cpp
utils/: gen-controls.py  release.sh
